--- a/templates/characteristic.html
+++ b/templates/characteristic.html
@@ -119,6 +119,10 @@
                     {% endif %}
                     {% if record.vmax == '-1' %}
                         <td>{{ ' ' }}</td>
+                    {% elif record.number == '16' %}
+                    <td>76 (μmol min<sup>-1</sup> mg<sup>-1</sup>)</td>
+                    {% elif record.number == '15' %}
+                    <td>1 (μmol min<sup>-1</sup> mg<sup>-1</sup>)</td>
                     {% else %}
                         <td>{{ record.vmax }}</td>
                     {% endif %}
