--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -35,7 +35,7 @@
                             fieldBoundary: '',
                             text: 'export',
                             exportOptions: {
-                                columns: [-1, 1]
+                                columns: [-2]
                             }
                         },
                         {
