--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -23,7 +23,7 @@
                 lengthMenu: [[10, 25, 50, -1], ['10 rows', '25 rows', '50 rows', 'Show all']],
                 dom: 'Bfrtip',
                 columnDefs: [{
-                    targets: [6,7],
+                    targets: [6, 7],
                     searchable: true,
                     visible: false
                 }],
@@ -33,10 +33,17 @@
                         fieldBoundary: '',
                         text: 'export',
                         exportOptions: {
-                            columns: [-1]
+                            columns: [-2]
                         }
                     },
-                    'copy',
+                    {
+                        extend: 'copy',
+                        fieldBoundary: '',
+                        text: 'copy',
+                        exportOptions: {
+                            columns: [-2]
+                        }
+                    },
                     {
                         text: 'All',
                         action: function () {
@@ -83,30 +90,30 @@
             });
         });
     </script>
-<div class="container-wrap">
-    <table class="table" id="data-table">
-        <thead>
-        <tr>
-            <th style="white-space: nowrap">Protein Name</th>
-            <th style="white-space: nowrap">Strain</th>
-            <th style="white-space: nowrap">Uniprot</th>
-            <th style="white-space: nowrap">PDB</th>
-            <th style="white-space: nowrap">Family</th>
-            <th style="white-space: nowrap">EC</th>
-            <th style="white-space: nowrap">Sequence</th>
-            <th style="white-space: nowrap">hide</th>
-            <th style="white-space: nowrap">type</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for record in records %}
+    <div class="container-wrap">
+        <table class="table" id="data-table">
+            <thead>
             <tr>
-                <td>{{ record.protein_enzyme }}</td>
-                <td>
-                    <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}">{{ record.strain }}</a>
-                </td>
-                <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}">{{ record.uniq_id }}</a></td>
-                
+                <th style="white-space: nowrap">Protein Name</th>
+                <th style="white-space: nowrap">Strain</th>
+                <th style="white-space: nowrap">Uniprot</th>
+                <th style="white-space: nowrap">PDB</th>
+                <th style="white-space: nowrap">Family</th>
+                <th style="white-space: nowrap">EC</th>
+                <th style="white-space: nowrap">Sequence</th>
+                <th style="white-space: nowrap">hide</th>
+                <th style="white-space: nowrap">type</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for record in records %}
+                <tr>
+                    <td>{{ record.protein_enzyme }}</td>
+                    <td>
+                        <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}">{{ record.strain }}</a>
+                    </td>
+                    <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}">{{ record.uniq_id }}</a></td>
+
                     {% if record.pdb  == '-1' %}
                         <td>{{ ' ' }}</td>
                     {% else %}
@@ -114,32 +121,32 @@
                             {{ record.pdb }}
                         </td>
                     {% endif %}
-                
-                <td>{{ record.family }}</td>
-                {% if record.ec == '-1' %}
-                    <td>{{ ' ' }}</td>
-                {% else %}
+
+                    <td>{{ record.family }}</td>
+                    {% if record.ec == '-1' %}
+                        <td>{{ ' ' }}</td>
+                    {% else %}
+                        <td>
+                            {% for element in ec[record.number] %}
+                                <a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ element }}">{{ element }}</a>
+                            {% endfor %}
+                        </td>
+                    {% endif %}
                     <td>
-                        {% for element in ec[record.number] %}
-                            <a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ element }}">{{ element }}</a>
-                        {% endfor %}
+                        <a href={{ url_for('detail', unid = record.uniq_id) }}>view</a>
                     </td>
-                {% endif %}
-                <td>
-                    <a href={{ url_for('detail', unid = record.uniq_id)}}>view</a>
-                </td>
-                <td>
-                    <p hidden>>{{ record.uniq_id }} {{ record.protein_enzyme }} OS={{ record.strain }}</p>
-                    <p hidden style="max-width: 40ch; word-wrap:break-word;"> {{ record.seq }}</p>
-                </td>
-                <td>
-                    <p>{{ record.type }}</p>
-                </td>
-            </tr>
-        {% endfor %}
+                    <td>
+                        <p hidden>>{{ record.uniq_id }} {{ record.protein_enzyme }} OS={{ record.strain }}</p>
+                        <p hidden style="max-width: 40ch; word-wrap:break-word;"> {{ record.seq }}</p>
+                    </td>
+                    <td>
+                        <p>{{ record.type }}</p>
+                    </td>
+                </tr>
+            {% endfor %}
 
-        </tbody>
+            </tbody>
 
-    </table>
-</div>
+        </table>
+    </div>
 {% endblock %}
