--- a/templates/_head.html
+++ b/templates/_head.html
@@ -4,9 +4,11 @@
     <link rel="icon" href="/static/favicon.ico">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js"
             integrity="sha256-L4cf7m/cgC51e7BFPxQcKZcXryzSju7VYBKJLOKPHvQ=" crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
+
     <script src="https://cdn.datatables.net/select/1.3.1/js/dataTables.select.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.2/js/dataTables.buttons.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.flash.min.js"></script>
@@ -36,45 +38,36 @@
           href="https://cdn.datatables.net/buttons/1.6.2/css/buttons.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.3.1/css/select.dataTables.min.css">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162166787-4"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162166787-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
+ gtag('config', 'UA-162166787-4');
+</script>
 
-        gtag('js', new Date());
-
-        gtag('config', 'UA-162166787-4');
-    </script>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
-    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <style type="text/css">
         .container-fluid {
             margin-left: 1em;
             margin-right: 1em;
         }
-
-        .container-wrap {
-            overflow: hidden;
-            overflow-x: scroll; /* 1 */
-            -webkit-backface-visibility: hidden;
-            -webkit-perspective: 1000;
-            -webkit-overflow-scrolling: touch; /* 2 */
-            text-align: justify;
-
-        /* 3 */
-        &
-        ::-webkit-scrollbar {
-            display: none;
-        }
-
-        }
+	.container-wrap {
+	    overflow: hidden;
+	    overflow-x: scroll; /* 1 */
+	    -webkit-backface-visibility: hidden;
+	    -webkit-perspective: 1000;
+	    -webkit-overflow-scrolling: touch; /* 2 */
+	    text-align: justify; /* 3 */
+	    &::-webkit-scrollbar {
+	        display: none;
+	    }
+	}
     </style>
 
 </head>
