Fix search if combine

--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -57,12 +57,16 @@
                             text: 'Bacteria',
                             action: function () {
                                 var table = $('#data-table').DataTable();
+                                table.column(4).search('').draw();
+                                var table = $('#data-table').DataTable();
                                 table.column(-1).search('Bacteria').draw();
                             }
                         },
                         {
                             text: 'Archaea',
                             action: function () {
+                                var table = $('#data-table').DataTable();
+                                table.column(4).search('').draw();
                                 var table = $('#data-table').DataTable();
                                 table.column(-1).search('Archaea').draw();
                             }
@@ -71,12 +75,16 @@
                             text: 'Eukaryota',
                             action: function () {
                                 var table = $('#data-table').DataTable();
+                                table.column(4).search('').draw();
+                                var table = $('#data-table').DataTable();
                                 table.column(-1).search('Eukaryota').draw();
                             }
                         },
                         {
                             text: 'Viruses',
                             action: function () {
+                                var table = $('#data-table').DataTable();
+                                table.column(4).search('').draw();
                                 var table = $('#data-table').DataTable();
                                 table.column(-1).search('Viruses').draw();
                             }
@@ -85,12 +93,16 @@
                             text: 'Unclassified',
                             action: function () {
                                 var table = $('#data-table').DataTable();
+                                table.column(4).search('').draw();
+                                var table = $('#data-table').DataTable();
                                 table.column(-1).search('unclassified').draw();
                             }
                             
                         },{
                         text: '{{fname}}',
                         action: function () {
+                            var table = $('#data-table').DataTable();
+                                table.column(-1).search('').draw();
                             var table = $('#data-table').DataTable();
                             table.column(4).search("^((?!" + '{{fname}}' + "-).)*$", true, false, true).draw();
                         }
@@ -99,6 +111,8 @@
                         {
                         text: '{{fname}}-like clusters',
                         action: function () {
+                            var table = $('#data-table').DataTable();
+                                table.column(-1).search('').draw();
                             var table = $('#data-table').DataTable();
                             table.column(4).search('{{fname}}-like clusters').draw();
                         }
