--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -55,12 +55,16 @@
                         text: 'Bacteria',
                         action: function () {
                             var table = $('#data-table').DataTable();
+                            table.column(4).search('').draw();
+                            var table = $('#data-table').DataTable();
                             table.column(-1).search('Bacteria').draw();
                         }
                     },
                     {
                         text: 'Archaea',
                         action: function () {
+                            var table = $('#data-table').DataTable();
+                            table.column(4).search('').draw();
                             var table = $('#data-table').DataTable();
                             table.column(-1).search('Archaea').draw();
                         }
@@ -69,12 +73,16 @@
                         text: 'Eukaryota',
                         action: function () {
                             var table = $('#data-table').DataTable();
+                            table.column(4).search('').draw();
+                            var table = $('#data-table').DataTable();
                             table.column(-1).search('Eukaryota').draw();
                         }
                     },
                     {
                         text: 'Viruses',
                         action: function () {
+                            var table = $('#data-table').DataTable();
+                            table.column(4).search('').draw();
                             var table = $('#data-table').DataTable();
                             table.column(-1).search('Viruses').draw();
                         }
@@ -83,11 +91,15 @@
                         text: 'Unclassified',
                         action: function () {
                             var table = $('#data-table').DataTable();
+                            table.column(4).search('').draw();
+                            var table = $('#data-table').DataTable();
                             table.column(-1).search('unclassified').draw();
                         }
                     },{
                         text: '{{fname}}',
                         action: function () {
+                            var table = $('#data-table').DataTable();
+                            table.column(-1).search('').draw();
                             var table = $('#data-table').DataTable();
                             table.column(4).search("^((?!" + '{{fname}}' + "-).)*$", true, false, true).draw();
                         }
@@ -96,6 +108,8 @@
                         {
                         text: '{{fname}}-like clusters',
                         action: function () {
+                            var table = $('#data-table').DataTable();
+                            table.column(-1).search('').draw();
                             var table = $('#data-table').DataTable();
                             table.column(4).search('{{fname}}-like clusters').draw();
                         }
