--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -41,6 +41,8 @@
                         extend: 'copy',
                         fieldBoundary: '',
                         text: 'copy',
+                        title: '',
+                        header:'',
                         exportOptions: {
                             columns: [-2]
                         }
