--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -43,6 +43,8 @@
                             extend: 'copy',
                             fieldBoundary: '',
                             text: 'copy',
+                            title: '',
+                            header:'',
                             exportOptions: {
                                 columns: [-2]
                             }
