--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url("../images/double-bubble-outline.png");
+    background-image: url("../images/double-bubble-outline.jpg");
 }
 
 .image-header {
@@ -16,7 +16,7 @@ html {
 }
 
 .mt-3 {
-    margin-top: 1em;
+    margin-top: 2em;
 }
 
 .breadcrumb a:link {
