--- a/templates/_head.html
+++ b/templates/_head.html
@@ -1,6 +1,8 @@
 <head>
     <meta charset="utf-8">
     <title>{{ config['title'] }}</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content={{ config['keywords'] }}>
     <link rel="icon" href="/static/favicon.ico">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
