--- a/templates/404.html
+++ b/templates/404.html
@@ -32,7 +32,7 @@
 				<h1>404</h1>
 			</div>
 			<h2>Oops! This Page Could Not Be Found</h2>
-			<p>Sorry but the page you are looking for does not exist, have been removed. name changed or is temporarily unavailable</p>
+			<p>Sorry but the page you are looking for does not exist, have been removed, name changed or is temporarily unavailable</p>
 			<a href="#" onclick="history.back();">Go back</a>
 			<a href="..">Homepage</a>
 			<a href="www.unl.edu">UNL</a>
