Change characteristic to evidence

--- a/templates/evidence.html
+++ b/templates/evidence.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row">
         <div class="page-header">
-            <h3>This is Characterize page<small>Subtext for header</small></h3>
+            <h3>This is evidence page<small>Subtext for header</small></h3>
 
         </div>
     </div>
@@ -27,8 +27,8 @@
                     visible: false
                 }],
                 buttons: [
+                    'pageLength',
                     {
-                        'pageLength',
                         extend: 'csvHtml5',
                         fieldBoundary: '',
                         text: 'export',
