--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
             <div class="page_list">
                 <ul class="list-group">
                     <li class="list-group-item"><a href="/">Home</a></li>
-                    <li class="list-group-item"><a href="/characteristic/all">Evidence</a></li>
+                    <li class="list-group-item"><a href="/evidence/all">Evidence</a></li>
                     <li class="list-group-item"><a href="/swissport/all">Swiss-Prot</a></li>
                     <li class="list-group-item"><a href="/trembl/all">TrEMBL</a></li>
                     <li class="list-group-item"><a href="/tree/all">Phylogeny</a></li>
