--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -18,7 +18,7 @@
 <!-- Links -->
 <ul class="nav navbar-nav">
     <li class="nav-item">
-    <a class="nav-link" href="/characteristic/all">Evidence</a>
+    <a class="nav-link" href="/evidence/all">Evidence</a>
      </li>
 <li class="dropdown">
 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Class <span class="caret"></span></a>
