--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -20,6 +20,7 @@
     <li class="nav-item">
     <a class="nav-link" href="/evidence/all">Evidence</a>
      </li>
+
 <li class="dropdown">
 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Class <span class="caret"></span></a>
 <ul class="dropdown-menu" aria-labelledby="about-us">
@@ -33,6 +34,9 @@
 <li><a href="https://www.unlbio.ml/classes/UCs">UCs</a></li>
 </ul>
 </li>
+    <li class="nav-item">
+    <a class="nav-link" href="/about">About</a>
+    </li>
 </ul>
 
 
