--- a/templates/classes.html
+++ b/templates/classes.html
@@ -87,7 +87,7 @@
 
 
 
-    <style type='text/css'>
+    <style type='text/css'  >
         :root {
             --side-bar-bg-color: #fff;
             --control-text-color: #777;
@@ -464,7 +464,7 @@
         }
 
         a {
-            color: var(--main-6);
+            color: #337ab7;
             font-weight: 500;
             padding: 0 2px;
             text-decoration: none;
@@ -472,8 +472,8 @@
 
         /* 链接 */
         #write a {
-            border-bottom: 1px solid var(--main-6);
-            color: var(--main-6);
+            border-bottom: 1px solid #337ab7;
+            color: #337ab7;
             text-decoration: none;
         }
 
@@ -485,7 +485,7 @@
         }
 
         #write a:hover {
-            border-bottom: 2px solid var(--main-6);
+            border-bottom: 2px solid #337ab7;
             color: var(--main-7);
         }
 
@@ -546,7 +546,7 @@
             margin: 0.2em auto 0;
             width: 100px;
             height: 2px;
-            border-bottom: 2px dashed var(--main-6);
+            border-bottom: 2px dashed #337ab7;
         }
 
         h2 {
@@ -554,7 +554,7 @@
             padding-left: 6px;
             line-height: 1.4;
             font-size: 1.6em;
-            border-left: 6px solid var(--main-6);
+            border-left: 6px solid #337ab7;
         }
 
         h3 {
@@ -701,7 +701,7 @@
         blockquote {
             position: relative;
             border: none;
-            border-left: 2px solid var(--main-6);
+            border-left: 2px solid #337ab7;
             color: var(--mid-7);
             font-size: 1em;
             font-style: normal;
@@ -724,7 +724,7 @@
             position: absolute;
             left: 12px;
             top: 0;
-            color: var(--main-6);
+            color: #337ab7;
             font-size: 2em;
             font-family: Arial, serif;
             line-height: 1em;
@@ -889,8 +889,8 @@
             content: '\2714';
             font-size: 0.625rem;
             color: var(--mid-1);
-            border: 1px solid var(--main-6);
-            background-color: var(--main-6);
+            border: 1px solid #337ab7;
+            background-color: #337ab7;
         }
 
         @media print {
@@ -1040,12 +1040,12 @@
         .file-list-item.active {
             background: var(--active-file-bg-color);
             color: var(--active-file-text-color);
-            border-left: 4px solid var(--main-6);
+            border-left: 4px solid #337ab7;
         }
 
         .file-tree-node.active > .file-node-background {
             background-color: var(--active-file-bg-color);
-            border-left: 4px solid var(--main-6);
+            border-left: 4px solid #337ab7;
             border-color: var(--active-file-border-color);
         }
 
