--- a/templates/successful.html
+++ b/templates/successful.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}About{% endblock %}
+{% block title %}Contact Form Completed{% endblock %}
 
 {% block content %}
-<t2>Email Send successfully</t2>
+<h1>Email Send successfully</h1>
 <!--Section: Contact v.2-->
 {% endblock %}
