--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,59 +1,61 @@
 <nav class="navbar navbar-default">
-<div class="container-fluid">
+    <div class="container-fluid">
 
-<!-- BRAND -->
-<div class="navbar-header">
-<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#alignment-example" aria-expanded="false">
-<span class="sr-only">Toggle navigation</span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</button>
-<a class="navbar-brand" href="/">{{ config['title'] }}</a>
-</div>
+        <!-- BRAND -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#alignment-example" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">{{ config['title'] }}</a>
+        </div>
 
-<!-- COLLAPSIBLE NAVBAR -->
-<div class="collapse navbar-collapse" id="alignment-example">
+        <!-- COLLAPSIBLE NAVBAR -->
+        <div class="collapse navbar-collapse" id="alignment-example">
 
-<!-- Links -->
-<ul class="nav navbar-nav">
-    <li class="nav-item">
-    <a class="nav-link" href="/evidence/all">Evidence</a>
-     </li>
+            <!-- Links -->
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/evidence/all">Evidence</a>
+                </li>
 
-<li class="dropdown">
-<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Class <span class="caret"></span></a>
-<ul class="dropdown-menu" aria-labelledby="about-us">
-<li><a href="https://www.unlbio.ml/classes/ORs">ORs</a></li>
-<li><a href="https://www.unlbio.ml/classes/FRs">FRs</a></li>
-<li><a href="https://www.unlbio.ml/classes/HRs">HRs</a></li>
-<li><a href="https://www.unlbio.ml/classes/NCRs">NCRs</a></li>
-<li><a href="https://www.unlbio.ml/classes/IRs">IRs</a></li>
-<li><a href="https://www.unlbio.ml/classes/SRs">SRs</a></li>
-<li><a href="https://www.unlbio.ml/classes/TRs">TRs</a></li>
-<li><a href="https://www.unlbio.ml/classes/UCs">UCs</a></li>
-</ul>
-</li>
-    <li class="nav-item">
-    <a class="nav-link" href="/about">About</a>
-    </li>
-</ul>
+                <li class="dropdown">
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Class <span class="caret"></span></a>
+                    <ul class="dropdown-menu" aria-labelledby="about-us">
+                        <li><a href="https://www.unlbio.ml/classes/ORs">ORs</a></li>
+                        <li><a href="https://www.unlbio.ml/classes/FRs">FRs</a></li>
+                        <li><a href="https://www.unlbio.ml/classes/HRs">HRs</a></li>
+                        <li><a href="https://www.unlbio.ml/classes/NCRs">NCRs</a></li>
+                        <li><a href="https://www.unlbio.ml/classes/IRs">IRs</a></li>
+                        <li><a href="https://www.unlbio.ml/classes/SRs">SRs</a></li>
+                        <li><a href="https://www.unlbio.ml/classes/TRs">TRs</a></li>
+                        <li><a href="https://www.unlbio.ml/classes/UCs">UCs</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">About</a>
+                </li>
+            </ul>
 
 
-</div>
+        </div>
 
-</div>
+    </div>
 </nav>
 
 <!-- Initialize Bootstrap functionality -->
 <script>
-// Initialize tooltip component
-$(function () {
-  $('[data-toggle="tooltip"]').tooltip()
-})
+    // Initialize tooltip component
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
 
-// Initialize popover component
-$(function () { 
-    	$("[data-toggle='popover']").popover({trigger:'hover click'});
+    // Initialize popover component
+    $(function () {
+        $("[data-toggle='popover']").popover({trigger: 'hover click'});
     });
 </script>
