--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,6 @@
 
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-
     <!--Section: Contact v.2-->
     <section class="mb-4">
 
@@ -88,6 +87,7 @@
 
                         </div>
                     </div>
+                    <input id="ip" type="hidden" name="ip" value="<?=$ip;?>">
                     <!--Grid row-->
                     {{ form.recaptcha }}
                 </form>
