--- a/templates/_head.html
+++ b/templates/_head.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <title>{{ config['title'] }}</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content={{ config['keywords'] }}>
+    <meta name="keywords" content="{{ config['keywords'] }}">
     <meta name="description" content="{{ description }}">
     <link rel="icon" href="/static/favicon.ico">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
