Change div size issue for tree

--- a/templates/classes.html
+++ b/templates/classes.html
@@ -19,7 +19,7 @@
 
     {% if class_id != 'all' %}
         <div class="familyInformation">
-            {{ content|markdown|safe }}
+            {{ content|markdown }}
         </div>
         <div class="Family">
             <h1>Family</h1>
