--- a/templates/tree.html
+++ b/templates/tree.html
@@ -4,7 +4,6 @@
 {% block content %}
 
     <style>
-
         .node circle {
             fill: #fff;
             stroke: steelblue;
@@ -20,32 +19,6 @@
             stroke: #ccc;
             stroke-width: 2px;
         }
-
-        #modal {
-            display: none;
-            width: 100%;
-
-            padding: 0 0 40px 0;
-            text-align: justify;
-            border-radius: 3px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-        }
-
-        #modal .fancybox-close-small {
-            top: 15px;
-        }
-
-        #modal .content-header {
-            border-bottom: 1px solid #eee;
-            padding: 20px;
-        }
-
-        #modal .content-scroll {
-            max-height: calc(100vh - 200px);
-            overflow: auto;
-            padding: 40px 20px 0 20px;
-        }
-
     </style>
     <div class="row">
         <div class="page-header">
@@ -66,13 +39,42 @@
             ancestor of life on Earth. The Open Tree of Life, first published September 2015, is a project to compile
             such a database for free publ{c access.</p>
     </div>
+    
+    <style>
+.modal-dialog {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
 
-    <a data-fancybox data-touch="false" href="#modal" class="btn btn-primary">Open Tree</a>
-    </p>
-    <div id="modal" class="content-scroll">
-        <div id="treeDiagram" style="margin-top: 20px">
-        </div>
+.modal-content {
+  height: 100%;
+  border-radius: 0;
+  overflow: hidden;
+}
+    </style>
+<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#modal">
+  Open Tree
+</button>
+
+<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="tree" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="tree">Tree</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+         <div class="treeDiagram" id="treeDiagram" style="width:100%;height:100%;overflow: hidden;"></div>
+      </div>
     </div>
+  </div>
+</div>
+
 
 
     <script>
