Move sponsor css to global

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -1,6 +1,6 @@
 {% include '_navbar.html' %}
 
-<div class="container-fluid  mt-3">
+<div class="container-fluid  topper">
     <div class="row">
         <div class="col-md-12 image-header">
             <p id="version">Version 2.1</p>
