--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include '_head.html' %}
+{% include '_css.html' %}
 <body>
 {% include '_header.html' %}
 <div class="container-fluid">
