--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,13 @@
 
 {% block content %}
 
+    <div class="row">
+        <div class="page-header">
+            <h3>About us<small>Subtext for header</small></h3>
 
+        </div>
+    </div>
+    
     {% for message in form.email.recaptcha %}
         <div style="color:red;">{{ message }}</div>
     {% endfor %}
@@ -15,7 +21,7 @@
     <section class="mb-4">
 
         <!--Section heading-->
-        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+        <h1>Contact us</h1>
         <!--Section description-->
         <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us
             directly. Our team will come back to you within
