--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                 <img src="../static/materials/characterized_protein.png" width="100%"
                      onclick="window.open('../static/images/seed.pdf')" alt="characterized protein">
             </picture>
-            {{ content|markdown|safe }}
+            {{ content|markdown }}
         </div>
         <div class="col-lg-4">
             <div class="page_list">
