--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -37,6 +37,9 @@
                     </ul>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/blastx">Blastx</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
             </ul>
