--- a/templates/blastx.html
+++ b/templates/blastx.html
@@ -34,7 +34,7 @@
                 <span style="font-size:1em;">Try <a id="id_example" href="#" style="color:blue;" value="protein"> example </a> sequences.</span>
             </div>
             {{ form.hidden_tag() }}
-<textarea placeholder= "DNA sequence in fasta format" style="min-height:100px" rows="10" name="id_sequences" id="id_sequences" oninput="validatePaste()">
+<textarea placeholder= "DNA sequence in fasta format" style="min-height:100px" rows="10" name="id_sequences" id="id_sequences" >
 </textarea>
 <br>
 	<div style="text-align:left;">
