add a data_analyzer to shorter the code in app.py, add result of blastx result html

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -26,14 +26,14 @@
                     <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Class <span class="caret"></span></a>
                     <ul class="dropdown-menu" aria-labelledby="about-us">
-                        <li><a href="https://www.unlbio.ml/classes/ORs">ORs</a></li>
-                        <li><a href="https://www.unlbio.ml/classes/FRs">FRs</a></li>
-                        <li><a href="https://www.unlbio.ml/classes/HRs">HRs</a></li>
-                        <li><a href="https://www.unlbio.ml/classes/NCRs">NCRs</a></li>
-                        <li><a href="https://www.unlbio.ml/classes/IRs">IRs</a></li>
-                        <li><a href="https://www.unlbio.ml/classes/SRs">SRs</a></li>
-                        <li><a href="https://www.unlbio.ml/classes/TRs">TRs</a></li>
-                        <li><a href="https://www.unlbio.ml/classes/UCs">UCs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "ORs")}}">ORs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "FRs")}}">FRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "HRs")}}">HRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "NCRs")}}">NCRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "IRs")}}">IRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "SRs")}}">SRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "TRs")}}">TRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "UCs")}}">UCs</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
