--- a/templates/detail.html
+++ b/templates/detail.html
@@ -9,7 +9,7 @@
 
         </div>
     </div>
-    <h1 style="max-width: 50ch; word-wrap:break-word;">
+    <h1 style="max-width: 50ch; word-wrap:break-word; text-align: left;">
         > {{ unid }} {{ seq }}
     </h1>
 
