--- a/templates/result_blastx.html
+++ b/templates/result_blastx.html
@@ -124,7 +124,7 @@
             <tbody>
             {% for record in records %}
                 <tr>
-                    <td>{{ record.protein_enzyme }}</td>
+                    <td>{{ record.protein_name }}</td>
                     <td>
                         <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}">{{ record.strain }}</a>
                     </td>
