--- a/templates/family.html
+++ b/templates/family.html
@@ -5,24 +5,14 @@
 {% block content %}
     <div class="row">
         <div class="page-header">
-            <h3>This is family page<small>Subtext for header</small></h3>
+            <h3>{{ name }}</h3>
 
         </div>
     </div>
     <!-- Main Content Area-->
-    {% if family_id == 'all' %}
-        <div class="familyInformation">
-            <h1>Family Information</h1>
-            <p style="font-size: medium">Please go to Home page to select a family.</p>
-        </div>
-    {% endif %}
-
-    {% if family_id != 'all' %}
-        <div class="familyInformation">
-            {{ content|markdown }}
-        </div>
+    {% if amount != 0 %}
         <div class="subFamily">
-            <h1>Subfamily</h1>
+            <h2>Subfamily</h2>
             <ul class="breadcrumb" style="font-size: medium">
                 {% for i in range(amount) %}
                     {% set family_id = family_id + '_' + (i + 1)|string() %}
@@ -32,9 +22,9 @@
                 {% endfor %}
             </ul>
         </div>
-
+{% endif %}
         <div class="familyResource">
-            <h1>Family Resource</h1>
+            <h2>Family Sequence</h2>
             <ul class="breadcrumb" style="font-size: medium">
                 <li>
                     <button><a href="{{ url_for('swissport', family_id = family_id) }}">Swissport</a></button>
@@ -52,5 +42,8 @@
 
             </ul>
         </div>
-    {% endif %}
+        <br>
+                <div class="familyInformation">
+            {{ content|markdown }}
+        </div>
 {% endblock %}
