Some small design update

--- a/templates/subfamily.html
+++ b/templates/subfamily.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="row">
         <div class="page-header">
-            <h3>This is family page<small>Subtext for header</small></h3>
+            <h3>{{name}}</h3>
 
         </div>
     </div>
