--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -4,15 +4,12 @@
 {% block content %}
     <div class="row">
         <div class="page-header">
-            <h3>This is TrEMBL page<small>Subtext for header</small></h3>
+            <h3>{{name}}</h3>
 
         </div>
     </div>
     <div class="abstractOfPage">
         <div class="informationOfGene">
-            <h1>
-                TrEMBL
-            </h1>
             <p>1 C-ring cleavage quercetin Bacillus subtilis (strain 168) a tryptophan auxotroph isolated after X-rays
                 mutagenesis of B. subtilis>
         </div>
