--- a/templates/blastx.html
+++ b/templates/blastx.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="row">
         <div class="page-header">
-            <h3>Blastx<small>Subtext for header</small></h3>
+            <h3>Blastx</h3>
 
         </div>
     </div>
