--- a/templates/evidence.html
+++ b/templates/evidence.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row">
         <div class="page-header">
-            <h3>This is evidence page<small>Subtext for header</small></h3>
+            <h3>{{ name }}</h3>
 
         </div>
     </div>
