--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
     <div class="row">
         <div class="page-header">
-            <h3>This is home<small>Subtext for header</small></h3>
+            <h3>{{name}}</h3>
 
         </div>
     </div>
