Finish combine network and tree

--- a/templates/_css.html
+++ b/templates/_css.html
@@ -457,10 +457,10 @@
             background-color: var(--main-1);
         }
 
-        #write .md-footnote {
-            color: var(--main-5);
-            background-color: var(--main-1);
-        }
+        /*#write .md-footnote {*/
+        /*    color: var(--main-5);*/
+        /*    background-color: var(--main-1);*/
+        /*}*/
 
         /* 流程图块 */
         #write .md-diagram-panel {
