--- a/templates/tree.html
+++ b/templates/tree.html
@@ -22,11 +22,11 @@
     </style>
     <div class="row">
         <div class="page-header">
-            <h3>This is tree page<small>Subtext for header</small></h3>
+            <h3>Tree for {{ name }}</h3>
 
         </div>
     </div>
-
+    <a class="btn btn-primary btn-lg btn-block" href="/swissport/{{name}}">Open Swissport for {{name}}</a>
     <div id="introduction">
         <p style="font-size: x-large">Tree diagrams originated in the medieval era to represent genealogical
             relationships.
@@ -55,7 +55,7 @@
             overflow: hidden;
         }
     </style>
-    <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#modal">
+    <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#modal" id="open_tree">
         Open Tree
     </button>
 
@@ -69,7 +69,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="treeDiagram" id="treeDiagram" style="width:100%;height:100%;overflow: hidden;"></div>
+                    <div class="treeDiagram" id="treeDiagram" style="width:100%;height:100%;overflow: hidden;border-radius: 25px;border: 1px solid #ccc!important;padding: 20px;"></div>
                 </div>
             </div>
         </div>
@@ -317,5 +317,8 @@
             }
         }
     </script>
+        <script>
+  document.getElementById("open_tree").click();
+</script>
 {% endblock %}
 
