Change to use markdown2 instal of python-markdown

--- a/templates/classes.html
+++ b/templates/classes.html
@@ -71,7 +71,7 @@
         </div>
         <br>
                 <div class="familyInformation">
-            {{ content|markdown }}
+            {{ content|safe }}
         </div>
 
 {% endblock %}
