--- a/templates/family.html
+++ b/templates/family.html
@@ -44,6 +44,6 @@
         </div>
         <br>
                 <div class="familyInformation">
-            {{ content|markdown }}
+            {{ content|safe }}
         </div>
 {% endblock %}
